--- a/Report.html
+++ b/Report.html
@@ -82,7 +82,7 @@
             <li><a href="Dashbord.html">แดชบอร์ด</a></li>
             <li><a href="DataCassava.html">ข้อมูลแปลง</a></li>
             <li><a href="Cassava Harvesting.html">บันทึกการเก็บเกี่ยว</a></li>
-            <li><a href="weather.html">พยากรณ์อากาศ</a></li>
+            <!-- <li><a href="weather.html">พยากรณ์อากาศ</a></li> -->
             <li><a href="Income and Expense_table.html">รายรับรายจ่าย</a></li>
             <li><a href="Income and Expense Analysis.html">สรุปรายรับรายจ่าย</a></li>
             <li><a href="Report.html">รายงาน</a></li>
