--- a/Cassava Harvesting.html
+++ b/Cassava Harvesting.html
@@ -36,6 +36,116 @@
         .edit-button:hover { background-color: #45a049; }
         .delete-button { background-color: #f44336; color: white; }
         .delete-button:hover { background-color: #e53935; }
+
+        /* Modal Styles */
+        .modal { 
+            display: none; 
+            position: fixed; 
+            z-index: 1; 
+            left: 0; 
+            top: 0; 
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgba(0, 0, 0, 0.4); 
+            display: flex; 
+            align-items: center; 
+            justify-content: center;
+        }
+
+        .modal-content { 
+            background-color: #fefefe; 
+            margin: 15px auto; 
+            padding: 20px; 
+            border: 1px solid #888; 
+            width: 90%; 
+            max-width: 700px; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .modal-content h2 { 
+            font-size: 1.5rem; 
+            color: #333; 
+            margin-bottom: 15px; 
+        }
+
+        .close { 
+            color: #aaa; 
+            float: right; 
+            font-size: 28px; 
+            font-weight: bold; 
+        }
+
+        .close:hover, .close:focus { 
+            color: black; 
+            text-decoration: none; 
+            cursor: pointer; 
+        }
+
+        .form-group { 
+            margin-bottom: 15px;
+        }
+
+        .form-group label { 
+            font-weight: bold; 
+            margin-bottom: 5px; 
+            display: inline-block; 
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="number"],
+        .form-group input[type="date"],
+        .form-group select,
+        .form-group input[type="file"] { 
+            width: calc(100% - 20px); 
+            padding: 10px; 
+            border: 1px solid #ddd; 
+            border-radius: 4px; 
+            font-size: 16px;
+            margin-bottom: 10px; 
+        }
+
+        .button-container { 
+            display: flex; 
+            gap: 10px; 
+            justify-content: center; 
+            margin-top: 20px; 
+        }
+
+        .btn { 
+            display: inline-block; 
+            background-color: var(--primary-color); 
+            color: #fff; 
+            padding: 12px 24px; 
+            border: none; 
+            border-radius: 4px; 
+            cursor: pointer; 
+            font-size: 16px; 
+            transition: background-color 0.3s ease; 
+            width: 45%;
+            text-align: center; 
+        }
+
+        .btn:hover { 
+            background-color: var(--secondary-color); 
+        }
+
+        .btn-back { 
+            background-color: #f44336; 
+        }
+
+        .btn-back:hover { 
+            background-color: #e53935; 
+        }
+
+        .button-container .btn-add { 
+            background-color: #2196F3; 
+        }
+
+        .button-container .btn-add:hover { 
+            background-color: #0b7dda; 
+        }
     </style>
 </head>
 <body>
@@ -62,7 +172,7 @@
                     <!-- Options will be populated by JavaScript -->
                 </select>
             </div>
-            <a href="Cassava Harvesting Process.html" class="button">เพิ่มข้อมูลการเก็บเกี่ยว</a>
+            <button class="button" id="open-modal">เพิ่มข้อมูลการเก็บเกี่ยว</button>
         </div>
         <table>
             <thead>
@@ -79,6 +189,44 @@
                 <!-- Rows will be populated by JavaScript -->
             </tbody>
         </table>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="harvest-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>เพิ่มข้อมูลการเก็บเกี่ยว</h2>
+            <form id="harvest-form">
+                <div class="form-group">
+                    <label for="field-name">ชื่อไร่/แปลง:</label>
+                    <input type="text" id="field-name" name="field-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="field-area">พื้นที่ (ไร่):</label>
+                    <input type="number" id="field-area" name="field-area" min="0" step="0.01" required>
+                </div>
+                <div class="form-group">
+                    <label for="harvest-date">วันที่เก็บเกี่ยว:</label>
+                    <input type="date" id="harvest-date" name="harvest-date" required>
+                </div>
+                <div class="form-group">
+                    <label for="yield">ผลผลิต (กิโลกรัม):</label>
+                    <input type="number" id="yield" name="yield" min="0" required>
+                </div>
+                <div class="form-group">
+                    <label for="starch-percentage">เปอร์เซ็นต์แป้ง (%):</label>
+                    <input type="number" id="starch-percentage" name="starch-percentage" min="0" max="100" step="0.1" required>
+                </div>
+                <div class="form-group">
+                    <label for="receipt-upload">อัพโหลดรูปใบเสร็จ:</label>
+                    <input type="file" id="receipt-upload" name="receipt-upload" accept="image/*">
+                </div>
+                <div class="button-container">
+                    <button type="submit" class="btn">บันทึกข้อมูล</button>
+                    <button type="button" class="btn btn-back" id="close-modal">ยกเลิก</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script>
@@ -163,6 +311,51 @@
                 const [year, month, day] = dateString.split('-');
                 return `${day}/${month}/${year}`;
             }
+
+            // Modal Functionality
+            const modal = document.getElementById('harvest-modal');
+            const openModalButton = document.getElementById('open-modal');
+            const closeModalButton = document.querySelector('.close');
+            const closeModalFooterButton = document.getElementById('close-modal');
+
+            openModalButton.addEventListener('click', () => {
+                modal.style.display = 'block';
+            });
+
+            closeModalButton.addEventListener('click', () => {
+                modal.style.display = 'none';
+            });
+
+            closeModalFooterButton.addEventListener('click', () => {
+                modal.style.display = 'none';
+            });
+
+            window.addEventListener('click', (event) => {
+                if (event.target === modal) {
+                    modal.style.display = 'none';
+                }
+            });
+
+            // Form Submission
+            document.getElementById('harvest-form').addEventListener('submit', function(e) {
+                e.preventDefault();
+                const formData = new FormData(this);
+                const newEntry = {
+                    fieldName: formData.get('field-name'),
+                    fieldArea: formData.get('field-area'),
+                    harvestDate: formData.get('harvest-date'),
+                    yield: formData.get('yield'),
+                    starchPercentage: formData.get('starch-percentage')
+                };
+
+                harvestData.push(newEntry);
+                localStorage.setItem('harvestData', JSON.stringify(harvestData));
+                renderTable(harvestData);
+                renderOptions(harvestData);
+
+                this.reset();
+                modal.style.display = 'none';
+            });
 
             renderTable(harvestData);
             renderOptions(harvestData);
